STM32H743I-EVAL_BSP: Update board layer

--- a/STM32H743I-EVAL_BSP/Layers/IoT/CubeMX/STM32CubeMX/STM32CubeMX.ioc
+++ b/STM32H743I-EVAL_BSP/Layers/IoT/CubeMX/STM32CubeMX/STM32CubeMX.ioc
@@ -220,7 +220,7 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:true\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SDMMC1_IRQn=true\:0\:0\:false\:false\:false\:true\:true\:true
+NVIC.SDMMC1_IRQn=true\:0\:0\:false\:false\:false\:true\:false\:true
 NVIC.SVCall_IRQn=true\:0\:0\:true\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:false\:true\:true\:false
 NVIC.TIM17_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:true
@@ -263,7 +263,7 @@ PA2.Signal=ETH_MDIO
 PA3.GPIOParameters=GPIO_Label
 PA3.GPIO_Label=ULPI_D0 [USB3320C_D0]
 PA3.Locked=true
-PA3.Mode=Device_HS
+PA3.Mode=Host_HS
 PA3.Signal=USB_OTG_HS_ULPI_D0
 PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=LED3_RGB [LD3_Red]
@@ -272,7 +272,7 @@ PA4.Signal=GPIO_Output
 PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=ULPI_CK  [USB3320C_CLKOUT]
 PA5.Locked=true
-PA5.Mode=Device_HS
+PA5.Mode=Host_HS
 PA5.Signal=USB_OTG_HS_ULPI_CK
 PA6.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=LCD_BL_CTRL
@@ -295,32 +295,32 @@ PA9.Signal=USB_OTG_FS_VBUS
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=ULPI_D1 [USB3320C_D1]
 PB0.Locked=true
-PB0.Mode=Device_HS
+PB0.Mode=Host_HS
 PB0.Signal=USB_OTG_HS_ULPI_D1
 PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=ULPI_D2 [USB3320C_D2]
 PB1.Locked=true
-PB1.Mode=Device_HS
+PB1.Mode=Host_HS
 PB1.Signal=USB_OTG_HS_ULPI_D2
 PB10.GPIOParameters=GPIO_Label
 PB10.GPIO_Label=ULPI_D3 [USB3320C_D3]
 PB10.Locked=true
-PB10.Mode=Device_HS
+PB10.Mode=Host_HS
 PB10.Signal=USB_OTG_HS_ULPI_D3
 PB11.GPIOParameters=GPIO_Label
 PB11.GPIO_Label=ULPI_D4 [USB3320C_D4]
 PB11.Locked=true
-PB11.Mode=Device_HS
+PB11.Mode=Host_HS
 PB11.Signal=USB_OTG_HS_ULPI_D4
 PB12.GPIOParameters=GPIO_Label
 PB12.GPIO_Label=ULPI_D5 [USB3320C_D5]
 PB12.Locked=true
-PB12.Mode=Device_HS
+PB12.Mode=Host_HS
 PB12.Signal=USB_OTG_HS_ULPI_D5
 PB13.GPIOParameters=GPIO_Label
 PB13.GPIO_Label=ULPI_D6 [USB3320C_D6]
 PB13.Locked=true
-PB13.Mode=Device_HS
+PB13.Mode=Host_HS
 PB13.Signal=USB_OTG_HS_ULPI_D6
 PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=RS232_TX [ST3241EBPR_T2IN]
@@ -340,7 +340,7 @@ PB2.Signal=QUADSPI_CLK
 PB5.GPIOParameters=GPIO_Label
 PB5.GPIO_Label=ULPI_D7 [USB3320C_D7]
 PB5.Locked=true
-PB5.Mode=Device_HS
+PB5.Mode=Host_HS
 PB5.Signal=USB_OTG_HS_ULPI_D7
 PB6.GPIOParameters=GPIO_Label,GPIO_Pu
 PB6.GPIO_Label=I2C1_SCL [STM32L152CCT6_I2C_SCL]
@@ -367,7 +367,7 @@ PB9.Signal=SDMMC1_CDIR
 PC0.GPIOParameters=GPIO_Label
 PC0.GPIO_Label=ULPI_STP [USB3320C_STP]
 PC0.Locked=true
-PC0.Mode=Device_HS
+PC0.Mode=Host_HS
 PC0.Signal=USB_OTG_HS_ULPI_STP
 PC1.GPIOParameters=GPIO_Label
 PC1.GPIO_Label=RMII_MDC [LAN8742A_MDC]
@@ -750,7 +750,7 @@ PH3.Signal=QUADSPI_BK2_IO1
 PH4.GPIOParameters=GPIO_Label
 PH4.GPIO_Label=ULPI_NXT [USB3320C_NXT]
 PH4.Locked=true
-PH4.Mode=Device_HS
+PH4.Mode=Host_HS
 PH4.Signal=USB_OTG_HS_ULPI_NXT
 PH5.GPIOParameters=GPIO_Label
 PH5.GPIO_Label=SDNWE [IS42S32800G_WE]
@@ -789,7 +789,7 @@ PI10.Signal=FMC_D31
 PI11.GPIOParameters=GPIO_Label
 PI11.GPIO_Label=ULPI_DIR [USB3320C_DIR]
 PI11.Locked=true
-PI11.Mode=Device_HS
+PI11.Mode=Host_HS
 PI11.Signal=USB_OTG_HS_ULPI_DIR
 PI12.GPIOParameters=GPIO_Label
 PI12.GPIO_Label=LCD_HSYNC
@@ -995,7 +995,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_DFSDM1_Init-DFSDM1-false-HAL-true,5-MX_ETH_Init-ETH-false-HAL-true,6-MX_FMC_Init-FMC-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_LTDC_Init-LTDC-false-HAL-true,9-MX_QUADSPI_Init-QUADSPI-false-HAL-true,10-MX_SAI1_Init-SAI1-false-HAL-true,11-MX_USART1_UART_Init-USART1-false-HAL-true,12-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,13-MX_USB_OTG_HS_PCD_Init-USB_OTG_HS-false-HAL-true,14-MX_SDMMC1_SD_Init-SDMMC1-true-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_DFSDM1_Init-DFSDM1-false-HAL-true,5-MX_ETH_Init-ETH-false-HAL-true,6-MX_FMC_Init-FMC-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_LTDC_Init-LTDC-false-HAL-true,9-MX_QUADSPI_Init-QUADSPI-false-HAL-true,10-MX_SAI1_Init-SAI1-false-HAL-true,11-MX_USART1_UART_Init-USART1-false-HAL-true,12-MX_USB_OTG_FS_USB_Init-USB_OTG_FS-true-HAL-true,13-MX_USB_OTG_HS_USB_Init-USB_OTG_HS-true-HAL-true,14-MX_SDMMC1_SD_Init-SDMMC1-true-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.ADCFreq_Value=75000000
 RCC.AHB12Freq_Value=200000000
 RCC.AHB4Freq_Value=200000000
@@ -1302,8 +1302,8 @@ USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
-USB_OTG_HS.IPParameters=VirtualMode-Device_HS
-USB_OTG_HS.VirtualMode-Device_HS=Device_HS
+USB_OTG_HS.IPParameters=VirtualMode-Host_HS
+USB_OTG_HS.VirtualMode-Host_HS=Host_HS
 VP_SYS_VS_tim17.Mode=TIM17
 VP_SYS_VS_tim17.Signal=SYS_VS_tim17
 board=STM32H743I-EVAL
